# Audio

./: .gitignore  Cargo.toml  README.md
audio_icon/: audio_icon-iOS-Default-1024x1024@1x.icns  audio_icon-macOS-Default-1024x1024@1x.icns
src/: main.rs
ui/: app-window.slint
