[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.5.1"
kira = "0.10.8"
qruhear = "0.1.1"
rand = "0.9.2"
savefile = "0.19.0"
savefile-derive = "0.19.0"
slint = "1.12.1"
sort = "0.8.5"

[build-dependencies]
slint-build = "1.12.1"
