[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.5.1"
kira = "0.10.8"
qruhear = "0.1.1"
rand = "0.9.2"
savefile = "0.19.0"
savefile-derive = "0.19.0"
slint = "1.12.1"

[build-dependencies]
slint-build = "1.12.1"

[package.metadata.bundle]
name = "Audio"
identifier = "com.keegan.audio"
icon = ["ui/icons/audio_icon.png"]
version = "1.0.0"
copyright = "Copyright (c) Keegan Wilgermein 2025. All rights reserved."
category = "Audio"
short_description = "An audio recorder, player, and eq."
osx_url_schemes = ["com.keegan.audio"]
